--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,15 @@
-.App {
-  text-align: center;
+body {
+  font-family: sans-serif;
+  color:#555555;
+  font-size:28px;
+  font-weight:bold;
+  background-color: #313131;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+a {
+  color:#444444;
+  text-decoration: none;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+a:visited {
+  color:#666666;
+  text-decoration: none;
 }
